--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #DB接続
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:h2:mem:diarydb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:8889/diarydb
+spring.datasource.username=diarydbuser
+spring.datasource.password=diarydbpass
 
 #SQLロギング出力の設定
 logging.level.jdbc.sqlonly=info
@@ -13,8 +15,6 @@ logging.level.jdbc.resultset=off
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 #エンティティクラスによるテーブルの自動生成を無効にする
-spring.jpa.hibernate.ddl-auto=none
 
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=classpath:data.sql
+
+
